# netlist

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  db.py  jsonc_loader.py  main.py  netlists.py  validators.py
backend/schema/: netlist.schema.jsonc  sample_netlist.json  sample_netlist_2.json  sample_netlist_2.jsonc  sample_netlist_invalid.json
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: NetlistGraph.jsx  StatusBadge.jsx
frontend/src/hooks/: useNetlists.js
frontend/src/pages/: DetailPage.jsx  ListPage.jsx  UploadPage.jsx
frontend/src/utils/: netlistToFlow.js
mongo-init/: 01-indexes.js  02-sample-data.js
